added simple put and get with mongodb

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,6 +35,14 @@ play.i18n.langs = [ "en" ]
 # db.default.username=sa
 # db.default.password=""
 
+# The mongo module
+#module.mongo=${play.path}/modules/mongo
+
+# mongodb connection details
+mongodb.uri = "mongodb://localhost:27017/siliconValleyQuotes"
+
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
