--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,7 +39,8 @@ play.i18n.langs = [ "en" ]
 #module.mongo=${play.path}/modules/mongo
 
 # mongodb connection details
-mongodb.uri = "mongodb://localhost:27017/siliconValleyQuotes"
+mongodb.uri = ${MONGODB_URI}
+#"mongodb://localhost:27017/siliconValleyQuotes"
 
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
