changed env variable in conf file

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,7 +39,7 @@ play.i18n.langs = [ "en" ]
 #module.mongo=${play.path}/modules/mongo
 
 # mongodb connection details
-mongodb.uri = ${MONGODB_URI}
+mongodb.uri = ${MONGOLAB_URI}
 #"mongodb://localhost:27017/siliconValleyQuotes"
 
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
