--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,3 +51,5 @@ play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+application.global=Global
