moved over to using H2 instead of mongodb

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,14 +35,17 @@ play.i18n.langs = [ "en" ]
 # db.default.username=sa
 # db.default.password=""
 
-# The mongo module
-#module.mongo=${play.path}/modules/mongo
+# Default database configuration
+slick.dbs.default.driver="slick.driver.H2Driver$"
+slick.dbs.default.db.driver="org.h2.Driver"
+slick.dbs.default.db.url="jdbc:h2:mem:play"
 
-# mongodb connection details
-mongodb.uri = ${MONGO_URI}
-#"mongodb://localhost:27017/siliconValleyQuotes"
-
-play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+h2mem1 = {
+  url = "jdbc:h2:mem:test1"
+  driver = org.h2.Driver
+  connectionPool = disabled
+  keepAliveConnection = true
+}
 
 # Evolutions
 # ~~~~~
